--- a/src/components/buttons.css
+++ b/src/components/buttons.css
@@ -3,25 +3,28 @@
   font-family: Arial, Helvetica, sans-serif;
   height: 100px;
   width: 200px;
-  margin: 4px 2px;
-  border-radius: 5px;
+  border-radius: 8px;
   font-weight: bold;
   box-shadow: 2px 2px 6px grey;
+  text-align: center;
+  color: #000000;
 }
 
 .playgamebutton {
-  background-color: yellow;
-  color: #000000;
-  font-size: 20px;
-  height: 300px;
-  width: 450px;
-  
+  text-shadow: 2px 1px 2px black;
+  color: yellow;
+  font-size: 28px;
+  height: 400px;
+  margin-left: 25px;
+  width: 280px;
+  background: url(https://images.dog.ceo/breeds/schnauzer-miniature/n02097047_6884.jpg) center; 
 }
 
 .learnbutton{
 background-color: rgb(0, 183, 255);
  color: #000000;
- height: 300px;
- width: 450px;
- font-size: 20px;
+ height: 400px;
+ width: 280px;
+ font-size: 25px;
+ margin-right: 25px;
 }
