--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
 .App {
   text-align: center;
 }
+
+
+.link{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  color: rgb(0, 81, 255);
+  font-weight: bold;
+  
+}
+
+a:link {
+  text-decoration: none;
+}
